force-app/main/default/objects/Account_Score__b/Account_Score__b.object-meta.xml
<CustomObject>
    <label>Account Score</label>
    <pluralLabel>Account Scores</pluralLabel>
</CustomObject>