force-app/main/default/objects/Account_Score__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Score</relationshipLabel>
    <relationshipName>Accounts_Score</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>