force-app/main/default/objects/Account_Score__b/fields/Account_type__c.field-meta.xml
<CustomField>
    <fullName>Account_type__c</fullName>
    <label>Account type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>