force-app/main/default/objects/Account_Score__b/fields/Adoption_Score__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Score__c</fullName>
    <label>Adoption Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>