force-app/main/default/objects/Account_Score__b/fields/ADOPTION_VALUE__c.field-meta.xml
<CustomField>
    <fullName>ADOPTION_VALUE__c</fullName>
    <label>ADOPTION_VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>