force-app/main/default/objects/Account_Score__b/fields/ADP_VAL__c.field-meta.xml
<CustomField>
    <fullName>ADP_VAL__c</fullName>
    <label>ADP_VAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>