force-app/main/default/objects/Account_Score__b/fields/ANNUAL_REVENUE__c.field-meta.xml
<CustomField>
    <fullName>ANNUAL_REVENUE__c</fullName>
    <label>ANNUAL_REVENUE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>