force-app/main/default/objects/Account_Score__b/fields/AVG_TTR_WITH_JIRA__c.field-meta.xml
<CustomField>
    <fullName>AVG_TTR_WITH_JIRA__c</fullName>
    <label>AVG_TTR_WITH_JIRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>