force-app/main/default/objects/Account_Score__b/fields/BOOKING__c.field-meta.xml
<CustomField>
    <fullName>BOOKING__c</fullName>
    <label>BOOKING$</label>
    <length>255</length>
    <type>Text</type>
</CustomField>