force-app/main/default/objects/Account_Score__b/fields/CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY__c</fullName>
    <label>CATEGORY</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>