force-app/main/default/objects/Account_Score__b/fields/CEM__c.field-meta.xml
<CustomField>
    <fullName>CEM__c</fullName>
    <label>CEM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>