force-app/main/default/objects/Account_Score__b/fields/CX_Score__c.field-meta.xml
<CustomField>
    <fullName>CX_Score__c</fullName>
    <label>CX Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>