force-app/main/default/objects/Account_Score__b/fields/CX_Score_Status__c.field-meta.xml
<CustomField>
    <fullName>CX_Score_Status__c</fullName>
    <label>CX Score Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>