force-app/main/default/objects/Account_Score__b/fields/DEF_CNT__c.field-meta.xml
<CustomField>
    <fullName>DEF_CNT__c</fullName>
    <label>DEF_CNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>