force-app/main/default/objects/Account_Score__b/fields/DEFECT_FIXED__c.field-meta.xml
<CustomField>
    <fullName>DEFECT_FIXED__c</fullName>
    <label>DEFECT_FIXED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>