force-app/main/default/objects/Account_Score__b/fields/DEFECT_SCORE__c.field-meta.xml
<CustomField>
    <fullName>DEFECT_SCORE__c</fullName>
    <label>DEFECT_SCORE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>