force-app/main/default/objects/Account_Score__b/fields/DEFECT_UNRESOLVED__c.field-meta.xml
<CustomField>
    <fullName>DEFECT_UNRESOLVED__c</fullName>
    <label>DEFECT_UNRESOLVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>