force-app/main/default/objects/Account_Score__b/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <label>END_DATE</label>
    <type>DateTime</type>
</CustomField>