force-app/main/default/objects/Account_Score__b/fields/ENT_COUNT__c.field-meta.xml
<CustomField>
    <fullName>ENT_COUNT__c</fullName>
    <label>ENT_COUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>