force-app/main/default/objects/Account_Score__b/fields/ENT_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>ENT_END_DATE__c</fullName>
    <label>ENT END DATE</label>
    <type>DateTime</type>
</CustomField>