force-app/main/default/objects/Account_Score__b/fields/ENT_PRODUCT_CODE__c.field-meta.xml
<CustomField>
    <fullName>ENT_PRODUCT_CODE__c</fullName>
    <label>ENT_PRODUCT_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>