force-app/main/default/objects/Account_Score__b/fields/ENT_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>ENT_START_DATE__c</fullName>
    <label>ENT START DATE</label>
    <type>DateTime</type>
</CustomField>