force-app/main/default/objects/Account_Score__b/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Accounts Score</relationshipLabel>
    <relationshipName>Accounts_Score</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>