force-app/main/default/objects/Account_Score__b/fields/ESC_CNT__c.field-meta.xml
<CustomField>
    <fullName>ESC_CNT__c</fullName>
    <label>ESC_CNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>