force-app/main/default/objects/Account_Score__b/fields/ESCALATIONS_SCORE__c.field-meta.xml
<CustomField>
    <fullName>ESCALATIONS_SCORE__c</fullName>
    <label>ESCALATIONS_SCORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>