force-app/main/default/objects/Account_Score__b/fields/FIS_QTR_ID__c.field-meta.xml
<CustomField>
    <fullName>FIS_QTR_ID__c</fullName>
    <label>FIS_QTR_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>