force-app/main/default/objects/Account_Score__b/fields/FISCAL_YEAR__c.field-meta.xml
<CustomField>
    <fullName>FISCAL_YEAR__c</fullName>
    <label>FISCAL_YEAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>