force-app/main/default/objects/Account_Score__b/fields/LTV_BOOKING__c.field-meta.xml
<CustomField>
    <fullName>LTV_BOOKING__c</fullName>
    <label>LTV_BOOKING$</label>
    <length>255</length>
    <type>Text</type>
</CustomField>