force-app/main/default/objects/Account_Score__b/fields/MIN_ENT_END_QTR__c.field-meta.xml
<CustomField>
    <fullName>MIN_ENT_END_QTR__c</fullName>
    <label>MIN_ENT_END_QTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>