force-app/main/default/objects/Account_Score__b/fields/MIN_ENT_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>MIN_ENT_START_DATE__c</fullName>
    <label>MIN_ENT_START_DATE</label>
    <type>DateTime</type>
</CustomField>