force-app/main/default/objects/Account_Score__b/fields/ONB_VAL__c.field-meta.xml
<CustomField>
    <fullName>ONB_VAL__c</fullName>
    <label>ONB_VAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>