force-app/main/default/objects/Account_Score__b/fields/OPEN_OPPORTUNITIES__c.field-meta.xml
<CustomField>
    <fullName>OPEN_OPPORTUNITIES__c</fullName>
    <label>OPEN_OPPORTUNITIES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>