force-app/main/default/objects/Account_Score__b/fields/P2_CASE_COUNT__c.field-meta.xml
<CustomField>
    <fullName>P2_CASE_COUNT__c</fullName>
    <label>P2_CASE_COUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>