force-app/main/default/objects/Account_Score__b/fields/PDM_Feature__c.field-meta.xml
<CustomField>
    <fullName>PDM_Feature__c</fullName>
    <label>PDM Feature</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>