force-app/main/default/objects/Account_Score__b/fields/PIPELINE__c.field-meta.xml
<CustomField>
    <fullName>PIPELINE__c</fullName>
    <label>PIPELINE$</label>
    <length>255</length>
    <type>Text</type>
</CustomField>