force-app/main/default/objects/Account_Score__b/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>