force-app/main/default/objects/Account_Score__b/fields/PRODUCT_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_CATEGORY__c</fullName>
    <label>PRODUCT CATEGORY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>