force-app/main/default/objects/Account_Score__b/fields/Product_Pillar_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_1__c</fullName>
    <label>Product Pillar 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>