force-app/main/default/objects/Account_Score__b/fields/PRODUCTS__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTS__c</fullName>
    <label>PRODUCTS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>