force-app/main/default/objects/Account_Score__b/fields/RF_CNT__c.field-meta.xml
<CustomField>
    <fullName>RF_CNT__c</fullName>
    <label>RF_CNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>