force-app/main/default/objects/Account_Score__b/fields/RFE_SCORE__c.field-meta.xml
<CustomField>
    <fullName>RFE_SCORE__c</fullName>
    <label>RFE_SCORE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>