force-app/main/default/objects/Account_Score__b/fields/RFES_PENDING_COMMIT__c.field-meta.xml
<CustomField>
    <fullName>RFES_PENDING_COMMIT__c</fullName>
    <label>RFES_PENDING_COMMIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>