force-app/main/default/objects/Account_Score__b/fields/SALES_ENGINEER_NAME__c.field-meta.xml
<CustomField>
    <fullName>SALES_ENGINEER_NAME__c</fullName>
    <label>SALES ENGINEER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>