force-app/main/default/objects/Account_Score__b/fields/SNAPSHOT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SNAPSHOT_DATE__c</fullName>
    <label>SNAPSHOT_DATE</label>
    <type>DateTime</type>
</CustomField>