force-app/main/default/objects/Account_Score__b/fields/SNAPSHOT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SNAPSHOT_TYPE__c</fullName>
    <label>SNAPSHOT_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>