force-app/main/default/objects/Account_Score__b/fields/Table_type__c.field-meta.xml
<CustomField>
    <fullName>Table_type__c</fullName>
    <label>Table type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>