force-app/main/default/objects/Account_Score__b/fields/TTR_WITH_JIRA_SCORE__c.field-meta.xml
<CustomField>
    <fullName>TTR_WITH_JIRA_SCORE__c</fullName>
    <label>TTR_WITH_JIRA_SCORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>